# iterative_equations_solving

./: .gitignore  CMakeLists.txt  lu_dec.m  matlab_gen..m  plots.py  project.yml
doc/: doxygen_config
doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  linear__equations_8h.html  linear__equations_8h_source.html  logging_8h.html  logging_8h_source.html  matrix_8h.html  matrix_8h_source.html  menudata.js  performance__test_8h_source.html  structlin__eq__sys__performance-members.html  structlin__eq__sys__performance.html  structmatrix-members.html  structmatrix.html  structvector-members.html  structvector.html  vector_8h.html  vector_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  _matrix.txt  direct_gauss.c  execution_test.c  helper.c  linear_equations.c  main.c  matrix.c  matrix_internals.c  performance_test.c  vector.c
src/include/: direct_gauss.h  helper.h  linear_equations.h  logging.h  matrix.h  matrix_internals.h  performance_test.h  vector.h
test/: CMakeLists.txt  test_direct_gauss.c  test_helper.c  test_jacobi.c  test_linear_equations.c  test_matrix.c  test_matrix_copying_data.c  test_matrix_ctor_validation.c  test_matrix_operations.c  test_memory_allocation_failures.c  test_vector.c
test/support/: matrix_test_helper.c  matrix_test_helper.h  unity_config.h
