cmake_minimum_required(VERSION 3.15)
project(tests C)
include_directories(../vendor/ceedling/vendor/unity/src)
include_directories(../vendor/ceedling/vendor/cmock/src)
include_directories(../vendor/ceedling/vendor/c_exception/lib)
include_directories(../src/include)
include_directories(../vendor/plugins)
include_directories(../build/test/mocks)
include_directories(../vendor/ceedling/plugins/fake_function_framework/src)
set(TESTS_SOURCE test_matrix.c
        test_vector.c)

set(C_FLAGS "-Wall -Werror --std=c99 -O")
set(CMAKE_C_FLAGS "${C_FLAGS}")
add_executable(dummy_test ${TESTS_SOURCE})